--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-.App {
+.list {
   text-align: center;
+  background-color: rgba(78, 84, 86, 0.10);
+  height: 800px;
 }
 
 .App-logo {
@@ -8,10 +10,10 @@
 }
 
 .App-header {
-  background-color: grey;
+  background-color: transparent;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: transparent;
 }
 
 .App-title {
@@ -22,7 +24,18 @@
   font-size: large;
 }
 
+header{
+  background-color: transparent;
+  height: 130px;
+  padding: 20px;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: 'white';
 }
