map showing/ centered signin up/ todo with checkmarks

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,17 @@
   text-align: center;
   background-color: rgba(78, 84, 86, 0.10);
   height: 800px;
+  padding-left: 5px;
+}
+.actuallist{
+  text-align: left;
+  background-color: rgba(78, 84, 86, 0.10);
+  height: 800px;
+  padding-left: 5px;
+}
+ul li {
+   list-style-type: none;
+    margin: 7px;
 }
 
 .App-logo {
